# cpp-simple-rpc

./: CMakeLists.txt  README.md  conanfile.py
inc/: simple-buffer.hpp
src/: simple-buffer.cpp
tests/: main.cpp  test-nested-structure.hpp  test-pointer-structure.hpp  test-simple-structure.hpp
